--- a/index.html
+++ b/index.html
@@ -1,3 +1,572 @@
-<p>Hello 大家好</p>
-<p>我是kai，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<title>Dreamhub IT-solution HTML5 Template</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Favicon -->
+	
+	<!-- bootstrap CSS -->
+	<link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css" media="all">
+	<!-- carousel CSS -->
+	<link rel="stylesheet" href="static/css/owl.carousel.min.css" type="text/css" media="all">	
+	<!-- nivo-slider CSS -->
+	<link rel="stylesheet" href="static/css/nivo-slider.css" type="text/css" media="all">
+	<!-- animate CSS -->
+	<link rel="stylesheet" href="static/css/animate.css" type="text/css" media="all">	
+	<!-- animated-text CSS -->
+	<link rel="stylesheet" href="static/css/animated-text.css" type="text/css" media="all">	
+	<!-- font-awesome CSS -->
+	<link rel="stylesheet" href="static/css/all.min.css" type="text/css" media="all">	
+	<!-- font-flaticon CSS -->
+	<link rel="stylesheet" href="static/css/flaticon.css" type="text/css" media="all">	
+	<!-- theme-default CSS -->
+	<link rel="stylesheet" href="static/css/theme-default.css" type="text/css" media="all">	
+	<!-- meanmenu CSS -->
+	<link rel="stylesheet" href="static/css/meanmenu.min.css" type="text/css" media="all">	
+	<link rel="stylesheet" href="static/css/font-awesome.min.css" type="text/css" media="all">	
+	<!-- Main Style CSS -->
+	<link rel="stylesheet" href="static/css/style.css" type="text/css" media="all">
+	<!-- transitions CSS -->
+	<link rel="stylesheet" href="static/css/owl.transitions.css" type="text/css" media="all">
+	<!-- venobox CSS -->
+	<link rel="stylesheet" href="static/css/venobox.css" type="text/css" media="all">
+	<!-- widget CSS -->
+	<link rel="stylesheet" href="static/css/widget.css" type="text/css" media="all">
+	<!-- responsive CSS -->
+	<link rel="stylesheet" href="static/css/responsive.css" type="text/css" media="all">
+	<!-- modernizr js -->	
+	<script src="static/js/modernizr-3.5.0.min.js"></script>
+	<link href='static/css/css.css' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="static/css/bootstrap-icons.css">
+
+</head>
+<body>
+ 
+  <!-- loder -->
+    <div class="loader-wrapper">
+      <div class="loader"></div>
+      <div class="loder-section left-section"></div>
+      <div class="loder-section right-section"></div>
+    </div>  
+
+<!-- main-header -->
+	<div class="main-header">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-lg-12">
+					<div id="sticky-header" class="nav-menu">
+						<div class="header-logo">
+							<a href="index.html"><img src="static/picture/logo.png" alt=""></a>
+							<a class="main_sticky" href="index.html"><img src="static/picture/logo.png" alt=""></a>
+						</div>
+						<div class="heder-menu">
+							<ul>
+								<li><a href="index.html">Demos </a></li>
+								<li><a href="">about</a></li>
+								<li class="icon"><a href="#">Pages </a>
+									<div class="sub-menu">
+										<ul>
+											<li><a href="">About us</a></li>
+											<li><a href="pricing.html">pricing</a></li>
+											<li><a href="portfolio.html">Portfolio</a></li>
+											<li><a href="service.html">Service</a></li>
+											<li><a href="service-details.html">Service details</a></li>
+											<li><a href="team.html">Team</a></li>		
+											<li><a href="contact.html">Contact</a></li>
+										</ul>
+									</div>
+								</li>
+								<li><a href="portfolio.html">portfolio</a></li>
+								<li class="icon"><a href="#">blog </a>
+									<div class="sub-menu">
+										<ul>
+											<li><a href="blog.html">Blog </a></li>
+											<li><a href="blog-details.html">Blog-details</a></li>
+										</ul>
+									</div>
+								</li>		
+								<li><a href="contact.html">contact </a></li>	
+							</ul>
+						</div>
+						<div class="header_tbn">
+							<a href="login.html"><i class="bi bi-arrow-right-circle"></i> log in</a>
+						</div>
+						<div class="header-button">
+							<a href="signup.html">Sign up</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- ============================================================== -->
+<!-- Start - Mobile-Menu- Section -->
+<!-- ============================================================= -->
+<div class="mobile-menu-area d-sm-block d-md-block d-lg-none sticky">
+	<div class="mobile-menu">
+		<nav class="itsoft_menu">
+			<ul class="nav_scroll">
+				<li><a href="index.html">Demos </a></li>
+				<li><a href="">about</a></li>
+				<li class="icon"><a href="#">Pages </a>
+					<div class="sub-menu">
+						<ul>
+							<li><a href="">About us</a></li>
+							<li><a href="pricing.html">pricing</a></li>
+							<li><a href="portfolio.html">Portfolio</a></li>
+							<li><a href="service.html">Service</a></li>
+							<li><a href="service-details.html">Service details</a></li>
+							<li><a href="team.html">Team</a></li>		
+							<li><a href="contact.html">Contact</a></li>
+						</ul>
+					</div>
+				</li>
+				<li><a href="portfolio.html">portfolio</a></li>
+				<li class="icon"><a href="#">blog </a>
+					<div class="sub-menu">
+						<ul>
+							<li><a href="blog.html">Blog </a></li>
+							<li><a href="blog-details.html">Blog-details</a></li>
+						</ul>
+					</div>
+				</li>		
+				<li><a href="contact.html">contact </a></li>	
+			</ul>
+		</nav>
+	</div>
+</div>
+<!--==================================================-->
+<!-- Start breadcumb-area -->
+<!--==================================================-->
+<div class="breadcumb-area d-flex align-items-center">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="breacumb-content">
+					<div class="breadcumb-title">
+						<h1>about us</h1>
+					</div>
+					<div class="breadcumb-content-text">
+					<a href="index.html"> home <span>about Us</span></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--==================================================-->
+<!-- Start mission Area -->
+<!--==================================================-->
+<div class="mission-area">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6">
+				<div class="single-mission">
+					<div class="section-title">
+						<div class="main-title">
+							<h1>Mission, Vission & Objective <br> of our Companies</h1>
+						</div>
+						<div class="sub-title">
+							<p>Competently evisculate granular convergence whereas focus interface Assertively productivate fully researched bandwidth before viral value competently negotiate adaptive mindshare.</p>
+						</div>
+					</div>
+					<div class="mission-content">
+						<div class="mission-icon">
+							<i class="bi bi-check"></i>
+						</div>
+						<div class="mission-discription">
+							<p>Globally extend economically sound customer service for extensible customer service.</p>
+						</div>
+					</div>
+					<div class="mission-content">
+						<div class="mission-icon">
+							<i class="bi bi-check"></i>
+						</div>
+						<div class="mission-discription">
+							<p>Globally extend economically sound customer service for extensible customer service.</p>
+						</div>
+					</div>
+					<div class="mission-button">
+						<a href="#">learn more <i class="bi bi-arrow-right"></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<div class="single-mission">
+					<div class="mission-thumb">
+						<img src="static/picture/mission.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--==================================================-->
+<!-- Start service Area -->
+<!--==================================================-->
+<div class="service-area style-two">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="section-title">
+					<div class="main-title">
+						<h1>Specially some reason for choose <br> our dreamhub Services</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-3 col-md-6">
+				<div class="single-service-box">
+					<div class="service-content">
+						<div class="service-icon-img">
+							<img src="static/picture/service.png" alt="">
+						</div>
+						<div class="service-title">
+							<h3>Advanced Monitoring</h3>
+						</div>
+						<div class="service-discription">
+							<p>Conveniently brand best-breed pro technology database</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="single-service-box">
+					<div class="service-content">
+						<div class="service-icon-img">
+							<img src="static/picture/service-3.png" alt="">
+						</div>
+						<div class="service-title">
+							<h3>Revenue Reporting</h3>
+						</div>
+						<div class="service-discription">
+							<p>Conveniently brand best-breed pro technology database</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="single-service-box">
+					<div class="service-content">
+						<div class="service-icon-img">
+							<img src="static/picture/service-1.png" alt="">
+						</div>
+						<div class="service-title">
+							<h3>Targated Audience</h3>
+						</div>
+						<div class="service-discription">
+							<p>Conveniently brand best-breed pro technology database</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="single-service-box">
+					<div class="service-content">
+						<div class="service-icon-img">
+							<img src="static/picture/service-2.png" alt="">
+						</div>
+						<div class="service-title">
+							<h3>Special Supports</h3>
+						</div>
+						<div class="service-discription">
+							<p>Conveniently brand best-breed pro technology database</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--==================================================-->
+<!-- Start feture Area -->
+<!--==================================================-->
+<div class="feature-area">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-lg-6">
+				<div class="single-feature">
+					<div class="section-title">
+						<div class="main-title">
+							<h1>Get your own individualized <br> shopping rostering</h1>
+						</div>
+						<div class="sub-title">
+							<p>Enthusiastically foster B2C niche markets rather than dynamic into infrastructures. Assertively syndicate highly efficient innovation rather than high standards in growth strategies. Assertively fashion future manufactured products with granul.</p>
+							<p>Than high standards in growth strategies. Assertively fashion future international telicommunications when launched new.</p>
+						</div>
+					</div>
+					<div class="feature-button">
+						<a href="#">learn more <i class="bi bi-arrow-right"></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<div class="single-feature">
+					<div class="feature-thumb">
+						<img src="static/picture/feature.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--==================================================-->
+<!-- Start team Area -->
+<!--==================================================-->
+<div class="team-area">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="section-title">
+				<div class="main-title">
+					<h1>Meet our expert team members</h1>
+				</div>
+			</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-3 col-md-6">
+				<div class="single-team">
+					<div class="team-thumb">
+						<img src="static/picture/team-2.png" alt="">
+					</div>
+					<div class="team-content">
+						<div class="team-title">
+							<h3>Willium Shexpure</h3>
+						</div>
+						<div class="team-text">
+							<p>HR Manager</p>
+						</div>
+						<div class="team-icon">
+							<ul>
+								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a href="#"><i class="fab fa-twitter"></i></a></li>	
+								<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>	
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="single-team">
+					<div class="team-thumb">
+						<img src="static/picture/team-3.png" alt="">
+					</div>
+					<div class="team-content">
+						<div class="team-title">
+							<h3>John K. Watson</h3>
+						</div>
+						<div class="team-text">
+							<p>CEO & Founder</p>
+						</div>
+						<div class="team-icon">
+							<ul>
+								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a href="#"><i class="fab fa-twitter"></i></a></li>	
+								<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>	
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="single-team">
+					<div class="team-thumb">
+						<img src="static/picture/team-1.png" alt="">
+					</div>
+					<div class="team-content">
+						<div class="team-title">
+							<h3>Mary K. Widener</h3>
+						</div>
+						<div class="team-text">
+							<p>HR Manager</p>
+						</div>
+						<div class="team-icon">
+							<ul>
+								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a href="#"><i class="fab fa-twitter"></i></a></li>	
+								<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>	
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="single-team">
+					<div class="team-thumb">
+						<img src="static/picture/team.png" alt="">
+					</div>
+					<div class="team-content">
+						<div class="team-title">
+							<h3>John Alexon Sen</h3>
+						</div>
+						<div class="team-text">
+							<p>CEO & Founder</p>
+						</div>
+						<div class="team-icon">
+							<ul>
+								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a href="#"><i class="fab fa-twitter"></i></a></li>	
+								<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>	
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--==================================================-->
+<!-- Start ceo Area -->
+<!--==================================================-->
+<div class="ceo-quote">
+	<div class="container">
+		<div class="row back">
+			<div class="col-lg-12">
+				<div class="quote-content">
+					<div class="quote-text">
+						<p>“Collaboratively re-engineer extensive imperatives without B2C schemas. Dramatically evolve interdependent alignments through seamless paradigms whiteboard services after”</p>
+					</div>
+					<div class="quote-thumb">
+						<img src="static/picture/quote.png" alt="">
+					</div>
+					<div class="quote-title">
+						<h3>Emma Watson</h3>
+						<span>CEO & Founder</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--==================================================-->
+<!-- Start footer Area -->
+<!--==================================================-->
+<div class="footer-area">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-3 col-md-6">
+				<div class="widgets-company-information">
+					<div class="footer-logo">
+						<a href="#"><img src="static/picture/logo.png" alt=""></a>
+					</div>
+					<div class="footer-discription">
+						<p>Dynamically procrastinate time functionalities virtual resources. Continually cultivate</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="single-footer">
+					<div class="footer-content">
+						<div class="footer-title">
+							<h3>Company</h3>
+						</div>
+						<ul>
+							<li><a href="#">About us</a></li>
+							<li><a href="#">Our team</a></li>
+							<li><a href="#">Contacts</a></li>
+							<li><a href="#">Portfolio</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="single-footer">
+					<div class="footer-content">
+						<div class="footer-title">
+							<h3>Resources</h3>
+						</div>
+						<ul>
+							<li><a href="#">Business Consulting</a></li>
+							<li><a href="#">Financial Tips</a></li>
+							<li><a href="#">Project Planning</a></li>
+							<li><a href="#">Terms Condition</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6">
+				<div class="single-footer">
+					<div class="footer-content">
+						<div class="footer-title">
+							<h3>Social Media</h3>
+						</div>
+						<ul>
+							<li><a href="#">Facebook</a></li>
+							<li><a href="#">Twitter</a></li>
+							<li><a href="#">Linkedin</a></li>
+							<li><a href="#">Pinterest</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="copy-right-area">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="copyright-title">
+						<h3>Copyright &copy; 2023.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></h3>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<!-- scroll strat============  -->
+<div class="scroll-area">
+	<div class="top-wrap">
+		<div class="go-top-btn-wraper">
+			<div class="go-top go-top-button">
+				<i class="fa fa-angle-double-up" aria-hidden="true"></i>
+				<i class="fa fa-angle-double-up" aria-hidden="true"></i>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- scroll end============  -->
+
+
+
+	<!-- jquery js -->	
+	<script src="static/js/jquery-3.2.1.min.js"></script>
+	<!-- bootstrap js -->	
+	<script src="static/js/bootstrap.min.js"></script>
+	<!-- carousel js -->
+	<script src="static/js/owl.carousel.min.js"></script>
+	<!-- counterup js -->
+	<script src="static/js/jquery.counterup.min.js"></script>
+	<!-- waypoints js -->
+	<script src="static/js/waypoints.min.js"></script>
+	<!-- wow js -->
+	<script src="static/js/wow.js"></script>
+	<!-- imagesloaded js -->
+	<script src="static/js/imagesloaded.pkgd.min.js"></script>
+	<!-- venobox js -->
+	<script src="static/js/venobox.js"></script>
+	<!-- ajax mail js -->
+	<script src="static/js/ajax-mail.js"></script>
+	<!--  animated-text js -->	
+	<script src="static/js/animated-text.js"></script>
+	<!-- venobox min js -->
+	<script src="static/js/venobox.min.js"></script>
+	<!-- isotope js -->
+	<script src="static/js/isotope.pkgd.min.js"></script>
+	<!-- jquery meanmenu js -->	
+	<script src="static/js/jquery.meanmenu.js"></script>
+	<!-- jquery scrollup js -->	
+	<script src="static/js/jquery.scrollUp.js"></script>
+	<!-- theme js -->	
+	<script src="static/js/theme.js"></script>
+
+
+	
+</body>
+</html>
